[package]
name = "sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.175"
serde_json = "1.0.64"
serde_derive = "1.0.75"
crossterm = "*"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend", "toml"]